crates/mensura-cli/tests/corpus/reject/real_index.mensura
// Rejected at resolve: an index field must be key-eligible; a `real`
// measurement is not an identity (ADR 0014).
unit Reading {
  at: real
}

store readings {
  unit { Reading }
}
